# botroyale

./: .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  actions.py  bot_api.py  bots.py  gui.py  logging.py  logic.py  logic_api.py  time_test.py
botroyale/: .gitignore  __init__.py  default_settings.toml
botroyale/api/: __init__.py  actions.py  bots.py  gui.py  logging.py  time_test.py
botroyale/assets/fonts/: LICENCE.txt
botroyale/bots/: __init__.py  basic.py  crazee_bot_003.py  crazee_bot_alpha.py  idle_bot.py  ninja_bot.py  random_bot.py
botroyale/gui/: __init__.py  _defaults.py  app.py  menubar.py  widget_defaults.py
botroyale/gui/battle/: __init__.py  _tilemap.py  battle.py  panel.py  tilemap.py
botroyale/gui/game/: game.py  menuwidget.py
botroyale/gui/kex/: __init__.py  kivy.py  util.py  widgets.py
botroyale/gui/kex/widgets/: __init__.py  app.py  input_manager.py  layouts.py  uix.py
botroyale/gui/menu/: __init__.py  _menuwidget.py  menuwidget.py
botroyale/logic/: __init__.py  battle.py  battle_manager.py  game.py  map_editor.py  maps.py  plate.py  prng.py  state.py
botroyale/logic/maps/: basic.json  custom.json  pitfield.json
botroyale/run/: __init__.py  cli.py  docs.py  example.py  format.py  gui.py  makedocs.py  snake.py  test.py  tetris.py
botroyale/util/: __init__.py  code.py  docs.py  file.py  hexagon.py  settings.py
bots/: __init__.py  crazee_bot_003.py  crazee_bot_alpha.py  crazee_bot_legacy.py  idle_bot.py  ninja001_bot.py  ninja002_bot.py  ninja_bot.py  ninja_retro_bot.py  random_bot.py  sleeper_bot.py  spiteful_bot.py  survivor_bot.py
bots/botural_selection/: base.py  selection.py
bots/botural_selection/tests/: bot.py  test_selection.py
docs/: homepage.md
docs/guides/: __init__.md  __init__.py  battle-primer.md  battle.md  brc.md  contributing.md  custom_run.md  custom_script.md  install.md  mechanics_primer.md  simple_bot.md
docs/guides/bots/: __init__.md  custom_battles.md  mechanics_primer.md  simple.md  simple_bot.md
docs/guides/ui/: __init__.md  cli.md  custom_script.md  gui.md
docs/templates/: config.mako  css.mako  html.mako
docs/templates/themes/: default.mako
gui/: __init__.py  app.py  cli.py  gui.py  map.py  menubar.py  panel.py  tilemap.py
gui/battle/: battle.py  panel.py  tilemap.py
gui/game/: game.py  menuwidget.py
gui/kex/: __init__.py  widgets.py
logic/: __init__.py  battle.py  battle_manager.py  game.py  map_editor.py  maps.py  plate.py  prng.py  state.py
logic/maps/: classic.json  danger.json  empty.json
run/: __init__.py  cli.py  docs.py  example.py  format.py  gui.py  guibase.py  makedocs.py  test.py  upgrade.py
temp_bots/: apt_get_bot.py  secret_bot.py
tests/: __init__.py  basic.py  battle.py  conftest.py  hexagon.py  maps.py
tests/api/: bot_selection.py  bpi.py
tests/api/gui/: battleapi.py  gameapi.py  gui.py
tests/logic/: battle.py  maps.py  prng.py  state.py
util/: __init__.py  code.py  file.py  hexagon.py  pathfinding.py  settings.py  time.py
