[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "botroyale"
description = "A battle royale for bots."
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Topic :: Games/Entertainment :: Turn Based Strategy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "Kivy>=2.1.0,<3.0",
  "numpy>=1.22.4,<2.0",
  "tomlkit>=0.11.4",
]

[project.optional-dependencies]
dev = [
  "pytest==7.1.3",
  "hypothesis==6.54.5",
  "black==22.6.0",
  "flake8==5.0.4",
  "flake8-docstrings==1.6.0",
  "pdoc3==0.10.0",
]

[tool.setuptools.packages.find]
include = [
  "botroyale*",
]

[tool.setuptools.package-data]
botroyale = [
  "default_settings.toml",
  "icon.png",
  "icon.ico",
  "assets/**",
  "logic/maps/*.json",
]

[project.scripts]
botroyale = "botroyale.run:script_entry_point"

[project.urls]
"Documentation" = "https://ariel.ninja/botroyale/docs"
"Source Code" = "https://github.com/ArielHorwitz/botroyale"
"Bug Tracker" = "https://github.com/ArielHorwitz/botroyale/issues"
